[metadata]
name = RankBasedLinkage
version = 0.1.1
author = Ryan DeWolfe
author_email = ryandewolfe33@gmail.com
maintainer = Ryan DeWolfe
maintainer_email = ryandewolfe33@gmail.com
description = Rank Based Linkage Clustering
long_description = file: README.md
keywords = ranking, clustering, comparator
url = https://github.com/ryandewolfe33/rankbasedlinkage.py
license = BSD License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = rankbasedlinkage
python_requires = >=3.11
install_requires =
    numpy>=2.0.0
    scikit-network>=0.32
    pynndescent>=0.5
    scipy>=1.14
    tqdm>=4.66
